--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,20 @@
 {
-  "portfolio": "Portfolio component"
+  "portfolio": "Portfolio component",
+  "email": "Email",
+  "password": "Password",
+  "login": "Login",
+  "msg-forgot-pw": "Forgot password?",
+  "msg-no-account-1": "You have no account? Then sign in ",
+  "msg-no-account-2": "here",
+  "msg-email-invalid": "Invalid email address.",
+  "msg-pw-invalid": "Invalid password.",
+  "msg-pw-requirements": "Your password should at least be 8 characters long and should contain at least one lower-case letter, one upper-case letter, one digit and one special character.",
+  "msg-text-missing": "Please fill in the form completely!",
+  "msg-try-again": "Please try again!",
+  "disclaimer": "Disclaimer",
+  "register": "Register",
+  "confirmPassword": "Confirm your password",
+  "msg-have-account-1": "You already have an account? Then log in ",
+  "msg-have-account-2": "here",
+  "msg-equal-pw-confirm": "The password and its confirmation must be equal."
 }
