Add action buttons, center table text. Modify header text to scale according to view, Add create new portfolio button

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,7 @@
   "portfolio.dashboard.errorMessage": "There has been an error while loading your portfolios.",
   "portfolio.dashboard.view.table": "Table view",
   "portfolio.dashboard.view.cards": "Cards view",
+  "portfolio.dashboard.createPortfolio": "Create New Portfolio",
   "portfolio.score": "Score",
   "portfolio.name": "Name",
   "portfolio.type": "Type",
@@ -15,6 +16,8 @@
   "portfolio.rename": "Rename",
   "portfolio.delete": "Delete",
   "portfolio.duplicate": "Duplicate",
+  "portfolio.real": "Real",
+  "portfolio.virtual": "Virtual",
   "error.message.default": "An error has occurred.",
   "error.message.AUTH_TOKEN_EXPIRED": "Your login has expired. Please log in again.",
   "error.action.retry": "Retry",
