Started on the summary section of the details page. Added mock data. Styling. Refactoring.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,15 @@
 {
-  "editPortfolio": "Edit Portfolio"
+  "editPortfolio": "Edit Portfolio",
+  "summaryHeader": "Summary",
+  "dialogHeader": "Here you can adjust the positions of your portfolio",
+  "discardChanges": "Discard changes",
+  "saveChanges": "Save changes",
+  "score": "Score",
+  "day7": "7 Day",
+  "year": "1 Year",
+  "totalValue": "Total Value",
+  "positions": "Positions",
+  "countries": "Countries",
+  "industries": "Industries",
+  "currencies": "Currencies"
 }
