Update DashboardTable styling and behavior, add tests.
- Add rename, duplicate and delete callbacks
- Disable delete for real portfolios
- Change number format

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,7 +8,6 @@
   "portfolio.dashboard.noPortfolios": "You don't have any portfolios. To get started, create a new virtual portfolio or import an existing portfolio.",
   "portfolio.score": "Score",
   "portfolio.name": "Name",
-  "portfolio.type": "Type",
   "portfolio.positionsCount": "Positions",
   "portfolio.value": "Value",
   "portfolio.7d": "7D",
@@ -16,6 +15,7 @@
   "portfolio.actions": "Actions",
   "portfolio.rename": "Rename",
   "portfolio.delete": "Delete",
+  "portfolio.deleteReal": "To delete this portfolio, unlink your connected account.",
   "portfolio.duplicate": "Duplicate",
   "portfolio.real": "Real",
   "portfolio.virtual": "Virtual",
