Added the anlysis section with placeholders for the charts. Pie chart changes. More styling tweaks.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,5 +13,9 @@
   "industries": "Industries",
   "currencies": "Currencies",
   "positionsTitle": "Positions",
-  "viewMore": "view more"
+  "viewMore": "view more",
+  "port.details.risk": "Risk Analysis",
+  "port.details.countries": "Countries",
+  "port.details.segments": "Segments",
+  "port.details.currency": "Currency"
 }
