--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
   "shell.login": "Login",
@@ -14,7 +15,6 @@
   "error.retry": "Please try again!",
   "shell.message.haveAccount": "You already have an account? Then log in ",
   "shell.link": "here",
-  "portfolio": "Portfolio component",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
   "portfolio.dashboard.errorMessage": "There has been an error while loading your portfolios.",
