fix: adjust en.json

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,19 +1,19 @@
 {
-  "email": "Email",
-  "password": "Password",
-  "login": "Login",
-  "register": "Register",
-  "confirmPassword": "Confirm your password",
-  "msg-forgot-pw": "Forgot password?",
-  "msg-no-account": "You have no account? Then sign in ",
-  "msg-email-invalid": "Invalid email address.",
-  "msg-pw-invalid": "Invalid password.",
-  "msg-pw-requirements": "Your password should at least be 8 characters long and should contain at least one lower-case letter, one upper-case letter, one digit and one special character.",
-  "msg-text-missing": "Please fill in the form completely!",
-  "msg-try-again": "Please try again!",
-  "msg-have-account": "You already have an account? Then log in ",
-  "msg-link": "here",
-  "msg-equal-pw-confirm": "The password and its confirmation must be equal."
+  "shell.email": "Email",
+  "shell.password": "Password",
+  "shell.login": "Login",
+  "shell.register": "Register",
+  "shell.confirmPassword": "Confirm your password",
+  "shell.message.forgotPassword": "Forgot password?",
+  "shell.message.noAccount": "You have no account? Then sign in ",
+  "error.invalidEmail": "Invalid email address.",
+  "error.invalidPassword": "Invalid password.",
+  "error.passwordRequirements": "Your password should at least be 8 characters long and should contain at least one lower-case letter, one upper-case letter, one digit and one special character.",
+  "error.confirmPassword": "The password and its confirmation must be equal.",
+  "error.incompleteForm": "Please fill in the form completely!",
+  "error.retry": "Please try again!",
+  "shell.message.haveAccount": "You already have an account? Then log in ",
+  "shell.link": "here",
   "portfolio": "Portfolio component",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
