--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,20 @@
 {
+  "shell.email": "Email",
+  "shell.password": "Password",
+  "shell.login": "Login",
+  "shell.register": "Register",
+  "shell.confirmPassword": "Confirm your password",
+  "shell.message.forgotPassword": "Forgot password?",
+  "shell.message.noAccount": "You have no account? Then register ",
+  "error.invalidEmail": "Invalid email address.",
+  "error.invalidPassword": "Invalid password.",
+  "error.passwordRequirements": "Your password should at least be 8 characters long and should contain at least one lower-case letter, one upper-case letter, one digit and one special character.",
+  "error.confirmPassword": "The password and its confirmation must be equal.",
+  "error.incompleteForm": "Please fill in the form completely!",
+  "error.retry": "Please try again!",
+  "shell.message.haveAccount": "You already have an account? Then log in ",
+  "shell.link": "here",
+  "portfolio": "Portfolio component",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
   "portfolio.dashboard.errorMessage": "There has been an error while loading your portfolios.",
