Add portfolio error messages.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -36,8 +36,26 @@
   "portfolio.real": "Real",
   "portfolio.virtual": "Virtual",
   "error.message.default": "An error has occurred.",
+  "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
+  "error.message.AUTH_TOKEN_INVALID": "Your authentication token is invalid. Please log in again.",
   "error.title.AUTH_TOKEN_EXPIRED": "Login expired",
   "error.message.AUTH_TOKEN_EXPIRED": "Your login has expired. Please log in again.",
+  "error.title.PORTFOLIO_ID_INVALID": "Invalid portfolio",
+  "error.message.PORTFOLIO_ID_INVALID": "The portfolio does not exist.",
+  "error.title.PORTFOLIO_NAME_INVALID": "Invalid portfolio name",
+  "error.message.PORTFOLIO_NAME_INVALID": "This portfolio name is not allowed.",
+  "error.title.PORTFOLIO_NAME_DUPLICATE": "Duplicate portfolio name",
+  "error.message.PORTFOLIO_NAME_DUPLICATE": "You already have a portfolio with this name.",
+  "error.title.ISIN_INVALID": "Unknown stock",
+  "error.message.ISIN_INVALID": "The stock you are trying to modify cannot be found.",
+  "error.title.QTY_INVALID": "Invalid quantity",
+  "error.message.QTY_INVALID": "Please enter a valid quantity.",
+  "error.title.RANGE_INVALID": "Invalid timespan",
+  "error.message.RANGE_INVALID": "No data is available for the selected timespan.",
+  "error.title.REAL_PORTFOLIO_MODIFICATION": "Real portfolio modification",
+  "error.message.REAL_PORTFOLIO_MODIFICATION": "You are trying to modify a real portfolio. This modification is only allowed on virtual portfolios.",
+  "error.title.UNKNOWN": "Unknown error",
+  "error.message.UNKNOWN": "An unknown error occurred.",
   "error.action.retry": "Retry",
   "error.action.login": "Back to login",
   "error.action.back": "Go back"
