Added the basic structure of the other sections. Created the RatioDonut component.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "portfolio.details.editPortfolio": "Edit Portfolio",
+  "portfolio.details.summaryHeader": "Summary",
   "portfolio.details.dialogHeader": "Here you can adjust the positions of your portfolio",
   "portfolio.details.discardChanges": "Discard changes",
   "portfolio.details.saveChanges": "Save changes",
@@ -16,6 +17,12 @@
   "portfolio.details.risk": "Risk Analysis",
   "portfolio.details.segments": "Segments",
   "portfolio.details.currency": "Currency",
+  "portfolio.details.keyfigures": "Key Figures",
+  "portfolio.details.dividends": "Dividends",
+  "portfolio.details.divYield": "Dividend Yield",
+  "portfolio.details.payout": "Dividend Payout Ratio",
+  "portfolio.details.nextDate": "Next Payout Date",
+  "portfolio.details.analyst": "Analysts",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
   "portfolio.dashboard.errorMessage": "There has been an error while loading your portfolios.",
