add Filter bars for "Country", "Industry", "Currency"

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -78,5 +78,7 @@
   "stock.valuation": "Valuation",
   "stock.growth": "Growth",
   "stock.div": "Div Yield",
-  "stock.industry": "Industry"
+  "stock.industry": "Industry",
+  "stock.country": "Country",
+  "stock.currency": "Currency"
 }
