--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,6 +65,7 @@
   "analyser.dashboard.view.table": "Table view",
   "analyser.dashboard.view.cards": "Cards view",
   "analyser.filter.title": "Filter Options",
+  "analyser.filter.clear": "Clear filters",
   "analyser.dashboard.noStocks": "We can't show you any stoks right now :(",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
