--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -68,6 +68,7 @@
   "analyser.dashboard.view.cards": "Cards view",
   "analyser.filter.title": "Filter Options",
   "analyser.dashboard.noStocks": "We can't show you any stoks right now :(",
+  "analyser.detail.text": "Go to details",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
