summary first iteration

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -110,6 +110,12 @@
   "stock.industry": "Industry",
   "stock.country": "Country",
   "stock.currency": "Currency",
+  "stock.intro": "Introduction",
+  "stock.founded": "Founded",
+  "stock.website": "Website",
+  "stock.fullTimeEmployees": "Number of Employees",
+  "stock.address": "Address",
+  "stock.assembly": "Next Shareholder's Assembly",
   "analyser.detail.keyfigure.PER.title": "Price to Earnings Ratio",
   "analyser.detail.keyfigure.PER.definition": "The P/E ratio relates a company's share price to its earnings per share. A high P/E ratio could mean that a company's stock is over-valued, or else that investors are expecting high growth rates in the future.",
   "analyser.detail.keyfigure.PBR.title": "Price to Book Ratio",
