Added Title and Sub-Title to Key Figures chart

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -94,7 +94,9 @@
   "analyser.filter.clear": "Clear filters",
   "analyser.dashboard.noStocks": "We can't show you any stoks right now :(",
   "analyser.detail.text": "Go to details",
-  "analyser.details.summaryHeader": "Executive Summary",
+  "analyser.details.summaryHeader": "1. Summary",
+  "analyser.details.KeyFiguresHeader": "2. Return",
+  "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
