Implement duplicate portfolio.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,9 @@
   "portfolio.virtual": "Virtual",
   "portfolio.dialog.rename.title": "Rename Portfolio",
   "portfolio.dialog.rename.text": "Enter a new name for the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.duplicate.title": "Duplicate Portfolio",
+  "portfolio.dialog.duplicate.text": "Enter a name for the copy of the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.duplicate.defaultName": "Copy of {{name}}",
   "error.message.default": "An error has occurred.",
   "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
   "error.message.AUTH_TOKEN_INVALID": "Your authentication token is invalid. Please log in again.",
