--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -40,6 +40,8 @@
   "portfolio.dialog.duplicate.title": "Duplicate Portfolio",
   "portfolio.dialog.duplicate.text": "Enter a name for the copy of the portfolio <portfolioName>{{name}}</portfolioName>.",
   "portfolio.dialog.duplicate.defaultName": "Copy of {{name}}",
+  "portfolio.dialog.delete.title": "Delete Portfolio",
+  "portfolio.dialog.delete.text": "You are about to delete the portfolio <portfolioName>{{name}}</portfolioName>. This action cannot be undone.",
   "error.message.default": "An error has occurred.",
   "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
   "error.message.AUTH_TOKEN_INVALID": "Your authentication token is invalid. Please log in again.",
