Implement create portfolio.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,10 +31,13 @@
   "portfolio.actions": "Actions",
   "portfolio.rename": "Rename",
   "portfolio.delete": "Delete",
+  "portfolio.create": "Create",
   "portfolio.deleteReal": "To delete this portfolio, unlink your connected account.",
   "portfolio.duplicate": "Duplicate",
   "portfolio.real": "Real",
   "portfolio.virtual": "Virtual",
+  "portfolio.dialog.create.title": "New virtual portfolio",
+  "portfolio.dialog.create.text": "Enter a name for the new virtual portfolio.",
   "portfolio.dialog.rename.title": "Rename Portfolio",
   "portfolio.dialog.rename.text": "Enter a new name for the portfolio <portfolioName>{{name}}</portfolioName>.",
   "portfolio.dialog.duplicate.title": "Duplicate Portfolio",
