--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -31,16 +31,27 @@
   "shell.password": "Password",
   "shell.login": "Login",
   "shell.register": "Register",
+  "shell.confirm": "Confirm your email-address",
   "shell.confirmPassword": "Confirm your password",
   "shell.message.forgotPassword": "Forgot password?",
   "shell.message.noAccount": "You have no account? Then register ",
+  "shell.question.haveAccount": "You already have an account? Then log in ",
+  "shell.message.haveAccount": "You already have an account. To log in please click ",
+  "shell.question.confirmationEmail": "You do not find the confirmation email? Please also check your spam folder!",
+  "shell.message.confirmationEmail": "You were send an confirmation email. Please copy the code into the textfield below.",
+  "shell.message.resendEmail": "The confirmation email was re-send.",
+  "shell.message.resend": "To re-sent the email click ",
   "error.invalidEmail": "Invalid email address.",
   "error.invalidPassword": "Invalid password.",
-  "error.passwordRequirements": "Your password should at least be 8 characters long and should contain at least one lower-case letter, one upper-case letter, one digit and one special character.",
+  "error.invalidEmailOrPassword": "The given email-address or password were not correct.",
+  "error.passwordRequirement.length": "Your password should at least be 8 characters long.",
+  "error.passwordRequirement.lowerCase": "Your password should contain at least one lower-case letter.",
+  "error.passwordRequirement.upperCase": "Your password should contain at least one upper-case letter.",
+  "error.passwordRequirement.number": "Your password should contain at least one number.",
+  "error.passwordRequirement.specialCharacter": "Your password should contain at least one special character.",
   "error.confirmPassword": "The password and its confirmation must be equal.",
   "error.incompleteForm": "Please fill in the form completely!",
   "error.retry": "Please try again!",
-  "shell.message.haveAccount": "You already have an account? Then log in ",
   "shell.link": "here",
   "portfolio.dashboard.headerText": "Diversifying and balancing your portfolio helps you to optimize the ratio between risk and return.",
   "portfolio.dashboard.title": "My Portfolios",
