--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -58,12 +58,20 @@
   "portfolio.actions": "Actions",
   "portfolio.rename": "Rename",
   "portfolio.delete": "Delete",
+  "portfolio.create": "Create",
   "portfolio.deleteReal": "To delete this portfolio, unlink your connected account.",
   "portfolio.duplicate": "Duplicate",
   "portfolio.real": "Real",
   "portfolio.virtual": "Virtual",
+  "portfolio.dialog.create.title": "New virtual portfolio",
+  "portfolio.dialog.create.text": "Enter a name for the new virtual portfolio.",
   "portfolio.dialog.rename.title": "Rename Portfolio",
   "portfolio.dialog.rename.text": "Enter a new name for the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.duplicate.title": "Duplicate Portfolio",
+  "portfolio.dialog.duplicate.text": "Enter a name for the copy of the portfolio <portfolioName>{{name}}</portfolioName>.",
+  "portfolio.dialog.duplicate.defaultName": "Copy of {{name}}",
+  "portfolio.dialog.delete.title": "Delete Portfolio",
+  "portfolio.dialog.delete.text": "You are about to delete the portfolio <portfolioName>{{name}}</portfolioName>. This action cannot be undone.",
   "error.message.default": "An error has occurred.",
   "error.title.AUTH_TOKEN_INVALID": "Authentication failure",
   "error.message.AUTH_TOKEN_INVALID": "Your authentication token is invalid. Please log in again.",
