Deleted P/E and put it to the top

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -151,7 +151,7 @@
   "stock.1y": "1Y Return",
   "stock.marketCap": "Market Cap",
   "stock.analystsTarget": "Analysts Target",
-  "stock.valuation": "Valuation",
+  "stock.valuation": "Valuation P/E",
   "stock.growth": "Growth",
   "stock.div": "Div Yield",
   "stock.industry": "Industry",
