--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -143,6 +143,9 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
+  "analyser.details.DividendYield": "Dividend Yield",
+  "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
+  "analyser.details.NextDate": "Next Date:",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
