made EuroCurrency.tsx take optional flag to paint value red or green (positive/negative) and reworked portfolio position cards further.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -13,6 +13,7 @@
   "portfolio.details.totalValue": "Total Value",
   "portfolio.details.totalReturn": "Total",
   "portfolio.details.holding": "Holding",
+  "portfolio.details.perShare": "Per share",
   "portfolio.details.positions": "Positions",
   "portfolio.details.countries": "Countries",
   "portfolio.details.industries": "Industries",
