added preliminary structure of DetailsMainBacktestingTimeline.tsx

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,10 @@
   "portfolio.details.nextDate": "Next Payout Date",
   "portfolio.details.analyst": "Analysts",
   "portfolio.details.backtesting": "Backtesting",
+  "portfolio.details.backtesting.start": "Start value",
+  "portfolio.details.backtesting.min": "Min value",
+  "portfolio.details.backtesting.max": "Max value",
+  "portfolio.details.backtesting.end": "End value",
   "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
