--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,12 @@
   "portfolio.details.backtesting.min": "Min value",
   "portfolio.details.backtesting.max": "Max value",
   "portfolio.details.backtesting.end": "End value",
+  "portfolio.details.backtesting.bestChange": "Best change",
+  "portfolio.details.backtesting.worstChange": "Worst change",
+  "portfolio.details.backtesting.mddMinMax": "Maximum Drawdown",
+  "portfolio.details.backtesting.standardDeviation": "Standard deviation",
+  "portfolio.details.backtesting.sharpeRatio": "Sharpe Ratio",
+  "portfolio.details.backtesting.cagr": "Compound Annual Growth Rate",
   "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
