added listener for change of dateFields and date validation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,8 @@
   "portfolio.details.divYield": "Dividend Yield",
   "portfolio.details.payout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
+  "portfolio.details.from": "From",
+  "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
   "portfolio.details.backtesting": "Backtesting",
   "portfolio.details.backtesting.start": "Start value",
@@ -40,6 +42,8 @@
   "portfolio.details.backtesting.standardDeviation": "Standard deviation",
   "portfolio.details.backtesting.sharpeRatio": "Sharpe Ratio",
   "portfolio.details.backtesting.cagr": "Compound Annual Growth Rate",
+  "portfolio.details.backtesting.subheading": "Here you can see how your portfolio would have performed in the past",
+  "portfolio.details.backtesting.dateHelperText": "Please select a valid time range.",
   "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
