Feat/dividend charts (#137)
* add Charts and the title
(Test for translation tbd)

* change Dividend Charts to different y-axises

* limit 2 after comma

* design changed

* donat size changed

* lint prettier-fix

* design changes

* design changed

* add x-axis

Co-authored-by: Ece Ata <eceatata@hotmail.com>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,6 +123,11 @@
   "analyser.details.summaryHeader": "1. Summary",
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
+  "analyser.details.DividendsHeader": "2.2 Dividends",
+  "analyser.details.DividendsHistory": "Dividends History",
+  "analyser.details.DividendYield": "Dividend Yield",
+  "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
+  "analyser.details.NextDate": "Next Date:",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
@@ -153,5 +158,7 @@
   "analyser.detail.keyfigure.EPS.title": "Earnings per Share",
   "analyser.detail.keyfigure.EPS.definition": "EPS indicates how much money a company makes for each share of its stock, and is a widely used metric to estimate corporate value. A higher EPS indicates greater value because investors will pay more for a company's shares if they think the company has higher profits relative to its share price.",
   "analyzer.addToPortfolio": "Add To Portfolio",
-  "analyzer.dialogHeader": "Select the portfolios you want to add to"
+  "analyzer.dialogHeader": "Select the portfolios you want to add to",
+  "analyser.detail.dividend.payoutratio": "Dividend Payout Ratio",
+  "analyser.detail.dividend.yield": "Dividend Yield"
 }
