--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -123,6 +123,7 @@
   "analyser.details.summaryHeader": "1. Summary",
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
+  "analyser.details.KeyFiguresHeader.Analysts": "2.3 Analysts",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
