risk section created

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -128,6 +128,10 @@
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
+  "analyser.details.RiskHeader": "3. Risks",
+  "analyser.details.RiskHeader.BetaFactor": "Beta Faktor: ",
+  "analyser.details.RiskHeader.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.RiskHeader.TreynorRatio": "Treynor Ratio: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
