added preliminary structure of analytics and mocks

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -29,6 +29,7 @@
   "portfolio.details.payout": "Dividend Payout Ratio",
   "portfolio.details.nextDate": "Next Payout Date",
   "portfolio.details.analyst": "Analysts",
+  "portfolio.details.analytics": "Analytics",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "cancel": "Cancel",
