--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -30,6 +30,7 @@
   "portfolio.details.nextDate": "Next Payout Date",
   "portfolio.details.analyst": "Analysts",
   "portfolio.details.analytics": "Analytics",
+  "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "cancel": "Cancel",
