--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,7 @@
   "portfolio.details.backtesting.subheading": "Here you can see how your portfolio would have performed in the past",
   "portfolio.details.backtesting.dateHelperText": "Please select a valid time range.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
+  "portfolio.details.backtesting.updateButton": "Update",
   "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
