--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -45,7 +45,7 @@
   "portfolio.details.backtesting.sharpeRatio": "Sharpe Ratio",
   "portfolio.details.backtesting.cagr": "Compound Annual Growth Rate",
   "portfolio.details.backtesting.subheading": "Here you can see how your portfolio would have performed in the past",
-  "portfolio.details.backtesting.dateHelperText": "Please select a valid time range.",
+  "portfolio.details.backtesting.dateHelperText": "Please select a valid time span and try again.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
   "portfolio.details.backtesting.updateButton": "Update",
   "cancel": "Cancel",
