--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -48,6 +48,12 @@
   "portfolio.details.backtesting.dateHelperText": "Please select a valid time span and try again.",
   "portfolio.details.backtesting.errorMessage": "There was an error while loading the Backtesting data.",
   "portfolio.details.backtesting.updateButton": "Update",
+  "portfolio.details.backtesting.bestChangeDescription": "This is a placeholder description for bestChange (translation key)",
+  "portfolio.details.backtesting.worstChangeDescription": "This is a placeholder description for worstChange (translation key)",
+  "portfolio.details.backtesting.mddDescription": "This is a placeholder description for mdd (translation key)",
+  "portfolio.details.backtesting.standardDeviationDescription": "This is a placeholder description for standardDeviation (translation key)",
+  "portfolio.details.backtesting.sharpeRatioDescription": "This is a placeholder description for sharpeRatio(translation key)",
+  "portfolio.details.backtesting.cagrDescription": "This is a placeholder description for cagr (translation key)",
   "cancel": "Cancel",
   "shell.email": "Email",
   "shell.password": "Password",
