--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -129,11 +129,11 @@
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
   "analyser.details.NextDate": "Next Date:",
   "analyser.details.RiskHeader": "3. Risks",
-  "analyser.details.Risks.BetaFactor": "Beta Faktor: ",
-  "analyser.details.Risks.SharpeRatio": "Sharpe Ratio: ",
-  "analyser.details.Risks.TreynorRatio": "Treynor Ratio: ",
-  "analyser.details.Risks.VolatilityChart": "Volatility Chart",
-  "analyser.details.Risks.CompanyShare": "Company share compared to the overall market over benchmark",
+  "analyser.details.Volatility.BetaFactor": "Beta Faktor: ",
+  "analyser.details.Volatility.SharpeRatio": "Sharpe Ratio: ",
+  "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
+  "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
+  "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
