Remove ISIN from portfolio types, use symbol as key for stocks.
The ISIN which was previously used to identify a stock is unavailable in
the backend. Instead, the ticker symbol which is assumed to be unique is
used for identification purposes.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -122,8 +122,8 @@
   "error.message.PORTFOLIO_NAME_INVALID": "This portfolio name is not allowed.",
   "error.title.PORTFOLIO_NAME_DUPLICATE": "Duplicate portfolio name",
   "error.message.PORTFOLIO_NAME_DUPLICATE": "You already have a portfolio with this name.",
-  "error.title.ISIN_INVALID": "Unknown stock",
-  "error.message.ISIN_INVALID": "The stock you are trying to modify cannot be found.",
+  "error.title.SYMBOL_INVALID": "Unknown stock",
+  "error.message.SYMBOL_INVALID": "The stock you are trying to modify cannot be found.",
   "error.title.QTY_INVALID": "Invalid quantity",
   "error.message.QTY_INVALID": "Please enter a valid quantity.",
   "error.title.RANGE_INVALID": "Invalid timespan",
