--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "portfolio": "Portfolio",
   "portfolio.details.editPortfolio": "Edit Portfolio",
   "portfolio.details.summaryHeader": "Summary",
   "portfolio.dialog.edit.title": "Edit portfolio positions",
@@ -182,7 +183,9 @@
   "analyser.detail.keyfigure.EPS.title": "Earnings per Share",
   "analyser.detail.keyfigure.EPS.definition": "EPS indicates how much money a company makes for each share of its stock, and is a widely used metric to estimate corporate value. A higher EPS indicates greater value because investors will pay more for a company's shares if they think the company has higher profits relative to its share price.",
   "analyzer.addToPortfolio": "Add To Portfolio",
-  "analyzer.dialogHeader": "Select the portfolios you want to add to",
+  "analyzer.addToPortfolio.noPortfolios": "You have no portfolios. Please create or import a portfolio first.",
+  "portfolio.dialog.addStock.title": "Add stock to portfolio",
+  "portfolio.dialog.addStock.text": "Change the values below to modify the amount of this stock in your portfolios.",
   "analyser.detail.dividend.payoutratio": "Dividend Payout Ratio",
   "analyser.detail.dividend.yield": "Dividend Yield",
   "shell.profile.profile-header": "Profile",
