Added sharpe ratio to the risk section.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -16,6 +16,7 @@
   "portfolio.details.totalReturn": "Total",
   "portfolio.details.holding": "Holding",
   "portfolio.details.perShare": "Per share",
+  "portfolio.details.sharpe": "Sharpe Ratio: ",
   "portfolio.details.positions": "Positions",
   "portfolio.details.countries": "Countries",
   "portfolio.details.industries": "Industries",
