Feat/portfolio analysts (#205)
* Made the analyst bar into a shared component.

* Styling of the analyst bar.

* Fixed overlapping indicators. Score is now rounded to nearest full percent. Stocks with same score appear in the same tooltip.

* Now only takes top 5 positions into account

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,6 +33,7 @@
   "portfolio.details.from": "From",
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
+  "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
