--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -149,6 +149,8 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
+  "analyser.details.AnalysisHeader": "2.4 Analysis",
+  "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
   "analyser.details.DividendsHistory": "Dividends History",
   "analyser.details.DividendYield": "Dividend Yield",
   "analyser.details.DividendPayoutRatio": "Dividend Payout Ratio",
