Final Balance Sheet Mock
- Waiting for Real data ;)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -149,7 +149,7 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
-  "analyser.details.AnalysisHeader": "2.4 Analysis",
+  "analyser.details.AnalysisHeader": "2.4 Analysts",
   "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
   "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
   "analyser.details.BalanceSheet.Assets": "Assets",
