--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -159,6 +159,10 @@
   "analyser.details.Volatility.TreynorRatio": "Treynor Ratio: ",
   "analyser.details.Volatility.VolatilityChart": "Volatility Chart",
   "analyser.details.Volatility.CompanyShare": "Company share compared to the overall market over benchmark",
+  "analyser.details.Leverage.DebtLevel": "Debt Level: ",
+  "analyser.details.Leverage.DebtCoverage": "Debt Coverage by operating cash flow: ",
+  "analyser.details.Leverage.InterestCoverage": "Interest Coverage: ",
+  "analyser.details.Leverage.DebtDevelopment": "Debt Development: ",
   "stock.symbol": "Symbol",
   "stock.name": "Company",
   "stock.lastPrice": "Last Price",
