added different color for negative values. sadly reversing the shadowing for negative values (e.g. -5 darker red than -2) does not work as expected

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -37,6 +37,8 @@
   "portfolio.details.analytics": "Analytics",
   "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
+  "portfolio.details.analytics.correlations.negative": "Negative correlation",
+  "portfolio.details.analytics.correlations.positive": "Positive correlation",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
