--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -150,7 +150,8 @@
   "analyser.details.KeyFiguresHeader": "2. Return",
   "analyser.details.KeyFiguresHeader.KeyFigures": "2.1 Key Figures",
   "analyser.details.DividendsHeader": "2.2 Dividends",
-  "analyser.details.AnalysisHeader": "2.4 Analysts",
+  "analyser.details.analystsHeader": "2.4 Analysts",
+  "analyser.details.analysts.target": "Analysts Target Price:",
   "analyser.details.BalanceSheetHeader": "2.3 Balance Sheet",
   "analyser.details.BalanceSheet.Liabilities": "Liabilities + Equities",
   "analyser.details.BalanceSheet.Assets": "Assets",
