removed visual bug on legend and refactored logic to format graph series data. credits to an-p

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -39,6 +39,7 @@
   "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
   "portfolio.details.analytics.correlations.negative": "Negative correlation",
   "portfolio.details.analytics.correlations.positive": "Positive correlation",
+  "portfolio.details.analytics.correlations.noData": "No Data",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
