Feat/portfolio correlations heatmap (#202)
* added preliminary structure of analytics and mocks
* fixed error, was passing a map to categories before and had the wrong key in HeatMapSeries (needs to be called data)
* height and minor code style issues
* tweaked types for Analytics and added mocks
* added standard deviation for entire portfolio
* added different color for negative values
* collapsed unnecessary component hierarchy

Co-authored-by: Andreas Papon <andreas.papon@tum.de>

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,12 @@
   "portfolio.details.to": "To",
   "portfolio.details.analyst": "Analysts",
   "portfolio.details.analystSubtext": "Here are the scores of your top 5 positions. Their score is based on professional analysts buy, hold and sell recommendations.",
+  "portfolio.details.analytics": "Analytics",
+  "portfolio.details.analytics.standardDeviation": "Standard Deviation of the entire portfolio:",
+  "portfolio.details.analytics.correlations.chartTitle": "Correlations of your Top 10 Stocks:",
+  "portfolio.details.analytics.correlations.negative": "Negative correlation",
+  "portfolio.details.analytics.correlations.positive": "Positive correlation",
+  "portfolio.details.analytics.correlations.noData": "No Data",
   "portfolio.details.emptyPortfolio": "This portfolio does not contain any stocks.",
   "portfolio.details.errorMessage": "There has been an error while loading the portfolio details.",
   "portfolio.details.backtesting": "Backtesting",
